<resources>
    <string name="app_name">Calculator</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="point">.</string>

    <string name="operator_add">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_multiplication">*</string>
    <string name="operator_divide">/</string>
    <string name="equal">=</string>

    <string name="operator_AC">AC</string>
    <string name="operator_DEL">DEL</string>
    <string name="operator_leftParenthesis">(</string>
    <string name="operator_rightParenthesis">)</string>
    <string name="down_line">输入表达式...</string>

</resources>